1999-11-18  Gerd Moellmann  <gerd@gnu.org>

	* speedbar.el: Clean up comment at the start of the file.
	Remove RCS id.

	* progmodes/compile.el (compilation-parse-errors): Use
	compilation-buffer-p instead of testing major-mode.

1999-11-18  Richard M. Stallman  <rms@caffeine.ai.mit.edu>

	* mail/rmailedit.el (rmail-cease-edit): Run rmail-mode-hook.

1999-11-18  Kenichi Handa  <handa@etl.go.jp>

	* ps-vars.el: Renamed from ps-print-def.el.  Provide ps-vars
	instead of ps-print-def.

	* ps-print.el: Require ps-vars instead of ps-print-def.

	* ps-mule.el: Require ps-vars instead of ps-print-def.

1999-11-17  Gerd Moellmann  <gerd@gnu.org>

	* simple.el (with-syntax-table): Save buffer explicitly instead of
	using save-excursion.

1999-11-16  Gerd Moellmann  <gerd@gnu.org>

	* mail/supercite.el: New maintainer.

1999-11-16  Reto Zimmermann  <reto@synopsys.com>

	* progmodes/vhdl-mode.el: Use new backquote syntax.

1999-11-16  Gerd Moellmann  <gerd@gnu.org>

	* simple.el (with-syntax-table): New.

1999-11-15  Sam Steingold  <sds@ksp.com>

	* dabbrev.el (dabbrev-filter-elements): Use the new backquote syntax.

1999-02-22  Sam Steingold  <sds@goems.com>

	* goto-addr.el (goto-address-at-mouse,
	goto-address-find-address-at-point): use compose-mail.
	(goto-address-mail-method): removed variable.
	(goto-address-send-using-mh-e, goto-address-send-using-mhe,
	goto-address-send-using-mail): removed functions.

1998-11-03  Sam Steingold  <sds@goems.com>

	* simple.el (backward-delete-char-untabify):
	backward-delete-char-untabify-method can be `all' now - to delete
	hungrily including newlines.

1999-11-15  Sam Steingold  <sds@ksp.com>

	* mail/rnews.el, mail/mh-utils.el: Use the new backquote syntax.

1999-11-15  Dave Love  <fx@gnu.org>

	* cus-edit.el (customize-face, customize-face-other-window):
	Require match from completing-read.
	(custom-buffer-done-function): Default to custom-bury-buffer, not
	bury-buffer.

1999-11-15  Gerd Moellmann  <gerd@gnu.org>
