@@ -138,8 +138,8 @@
 	 (?\  . ?^))
      (?\" (?U . ?\334) (?u . ?\374)
 	  (?\  . ?\"))
-     (?~ (?A . ?\303) (?O . ?\325) (?C . ?\307)
-	 (?a . ?\343) (?o . ?\365) (?c . ?\347)
+     (?~ (?A . ?\303) (?O . ?\325) (?a . ?\343) (?o . ?\365)
+         (?C . ?\307) (?N . ?\321) (?c . ?\347) (?n . ?\361)
 	 (?\  . ?~))
      (?, (?c . ?\347) (?C . ?\307) (?, . ?,)))
 
@@ -183,9 +183,6 @@
 	 (?l . ?\345) (?n . ?\361) (?o . ?\363) (?r . ?\340) (?s . ?\266)
 	 (?u . ?\372) (?y . ?\375) (?z . ?\274)
 	 (?' . ?\264) (?\  . ?')) 
-     (?, (?S . ?\252) (?T . ?\336)
-	 (?s . ?\272) (?t . ?\376)
-	 (?\  . ?,))
      (?` (?A . ?\241) (?C . ?\307) (?E . ?\312) (?L . ?\243) (?S . ?\252)
 	 (?T . ?\336) (?Z . ?\257)
 	 (?a . ?\261) (?l . ?\263) (?c . ?\347) (?e . ?\352) (?s . ?\272)
